@@ -1,22 +1,21 @@
 package com.baeldung.batchtesting;
 
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.springframework.batch.test.AssertFile.assertFileEquals;
 
-import java.util.Arrays;
+import java.util.List;
 
-import com.baeldung.batchtesting.SpringBatchConfiguration;
 import com.baeldung.batchtesting.model.Book;
 import com.baeldung.batchtesting.model.BookRecord;
-import org.junit.After;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.batch.core.JobParameters;
 import org.springframework.batch.core.JobParametersBuilder;
 import org.springframework.batch.core.StepExecution;
+import org.springframework.batch.item.Chunk;
 import org.springframework.batch.item.file.FlatFileItemReader;
 import org.springframework.batch.item.json.JsonFileItemWriter;
-import org.springframework.batch.test.AssertFile;
 import org.springframework.batch.test.JobRepositoryTestUtils;
 import org.springframework.batch.test.MetaDataInstanceFactory;
 import org.springframework.batch.test.StepScopeTestUtils;
@@ -24,21 +23,12 @@ import org.springframework.batch.test.context.SpringBatchTest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.core.io.FileSystemResource;
-import org.springframework.test.annotation.DirtiesContext;
-import org.springframework.test.annotation.DirtiesContext.ClassMode;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.TestExecutionListeners;
-import org.springframework.test.context.junit4.SpringRunner;
-import org.springframework.test.context.support.DependencyInjectionTestExecutionListener;
-import org.springframework.test.context.support.DirtiesContextTestExecutionListener;
 
 
-@RunWith(SpringRunner.class)
 @SpringBatchTest
 @EnableAutoConfiguration
 @ContextConfiguration(classes = { SpringBatchConfiguration.class })
-@TestExecutionListeners({ DependencyInjectionTestExecutionListener.class, DirtiesContextTestExecutionListener.class })
-@DirtiesContext(classMode = ClassMode.AFTER_CLASS)
 public class SpringBatchStepScopeIntegrationTest {
 
     private static final String TEST_OUTPUT = "src/test/resources/output/actual-output.json";
@@ -62,7 +52,7 @@ public class SpringBatchStepScopeIntegrationTest {
         return paramsBuilder.toJobParameters();
     }
 
-    @After
+    @AfterEach
     public void cleanUp() {
         jobRepositoryTestUtils.removeJobExecutions();
     }
@@ -80,11 +70,11 @@ public class SpringBatchStepScopeIntegrationTest {
             while ((bookRecord = itemReader.read()) != null) {
 
                 // then
-                assertThat(bookRecord.getBookName(), is("Foundation"));
-                assertThat(bookRecord.getBookAuthor(), is("Asimov I."));
-                assertThat(bookRecord.getBookISBN(), is("ISBN 12839"));
-                assertThat(bookRecord.getBookFormat(), is("hardcover"));
-                assertThat(bookRecord.getPublishingYear(), is("2018"));
+                assertEquals("Foundation", bookRecord.getBookName());
+                assertEquals("Asimov I.", bookRecord.getBookAuthor());
+                assertEquals("ISBN 12839", bookRecord.getBookISBN());
+                assertEquals("hardcover", bookRecord.getBookFormat());
+                assertEquals("2018", bookRecord.getPublishingYear());
             }
             itemReader.close();
             return null;
@@ -106,12 +96,12 @@ public class SpringBatchStepScopeIntegrationTest {
         StepScopeTestUtils.doInStepScope(stepExecution, () -> {
 
             jsonItemWriter.open(stepExecution.getExecutionContext());
-            jsonItemWriter.write(Arrays.asList(demoBook));
+            jsonItemWriter.write(new Chunk<>(List.of(demoBook)));
             jsonItemWriter.close();
             return null;
         });
 
         // then
-        AssertFile.assertFileEquals(expectedResult, actualResult);
+        assertFileEquals(expectedResult, actualResult);
     }
 }
